# sarashina2.2-ocr-demo

./: LICENSE  README.md  app.py  pyproject.toml
